# brewcontent-orm-setup

./: .env.example  .gitignore  AGENTS_INSTRUCTION.md  COMMANDS.md  DECISIONS.md  MIGRATION_POLICY.md  Makefile  PLAN.md  README.md  REPO_STRUCTURE.md  TEAM_ONBOARDING.md  alembic.ini  docker-compose.yml  pyproject.toml
alembic/: env.py
alembic/versions/: 20260702_0001_initial_agent_runs.py  20260702_0001_initial_web_search.py  8c2db4dcd024_add_search_provider_to_search_jobs.py
app/: main.py
app/db/: config.py  mixins.py  session.py
app/db/models/: __init__.py  agent_run.py  search.py
