[build-system]
requires = ["setuptools>=69", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "microservice-orm-base"
version = "0.1.0"
description = "Starter base for FastAPI microservices using SQLAlchemy and Alembic"
requires-python = ">=3.11"
dependencies = [
  "fastapi>=0.115.0",
  "sqlalchemy>=2.0.30",
  "alembic>=1.13.2",
  "psycopg[binary]>=3.2.0",
  "duckduckgo-search>=6.2.13",
  "uvicorn>=0.30.0",
]

[tool.setuptools.packages.find]
where = ["."]
include = ["app*"]
exclude = ["alembic*"]

[tool.alembic]
script_location = "alembic"
